[gd_scene load_steps=3 format=3 uid="uid://dhp6qc7m1lijw"]

[ext_resource type="PackedScene" uid="uid://cs2fl7pw33da1" path="res://anim-button.tscn" id="1_gt22q"]
[ext_resource type="Script" uid="uid://bbgp12lmleoyb" path="res://game_over_screen.gd" id="1_w3hxg"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w3hxg")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 125.0
offset_right = 802.0
offset_bottom = 379.0
bbcode_enabled = true
text = "[font_size=30][color=brown]Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" parent="." instance=ExtResource("1_gt22q")]
layout_mode = 1
offset_left = -155.0
offset_top = 61.0
offset_right = 157.0
offset_bottom = 209.0
text = "Retry?"

[node name="GameEndPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BurgersThrownCountLabel" type="Label" parent="GameEndPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 387.0
offset_top = 41.0
offset_right = 728.0
offset_bottom = 64.0
text = "MENU_LABEL_BURGERS_THROWN_COUNT: 0"

[node name="BurgersLandedCount" type="Label" parent="GameEndPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 391.0
offset_top = 67.0
offset_right = 732.0
offset_bottom = 90.0
text = "MENU_LABEL_BURGERS_THROWN_COUNT: 0"

[node name="HighscoreLabel" type="Label" parent="GameEndPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 383.0
offset_top = 104.0
offset_right = 1015.0
offset_bottom = 146.0
text = "Highscore: "

[node name="CombosLabel" type="Label" parent="GameEndPanel"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
